--- a/shop.html
+++ b/shop.html
@@ -5,191 +5,35 @@
 <title>Shop - WattSun</title>
 <link href="main.css" rel="stylesheet"/>
 <style>
-        html, body {
-            height: 100%;
-            min-height: 100%;
-            box-sizing: border-box;
-        }
-        body {
-            display: flex;
-            flex-direction: column;
-            min-height: 100vh;
-            background: #fffdf7;
-        }
-        header {
-            flex-shrink: 0;
-        }
-        .container {
-            max-width: 1200px;
-            margin: 28px auto 0 auto;
-            padding: 18px 5px 0 5px;
-            flex: 1 0 auto;
-        }
-        h2 {
-            text-align: center;
-            margin-bottom: 12px;
-        }
-        .product-card {
-            background: #fff;
-            border-radius: 16px;
-            box-shadow: 0 6px 28px -7px rgba(0,0,0,0.10);
-            padding: 20px 18px 22px 18px;
-            text-align: center;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            min-width: 0;
-            min-height: 0;
-            border: none;
-            transition: box-shadow 0.16s;
-        }
-        .product-card:hover {
-            box-shadow: 0 12px 36px -9px #f7b73355;
-        }
-        .product-card img, .product-img-placeholder {
-            width: 100%;
-            height: 90px;
-            object-fit: cover;
-            border-radius: 10px 10px 0 0;
-            margin-bottom: 12px;
-            box-shadow: 0 2px 8px rgba(0,0,0,0.04);
-            background: #f7f2e9;
-            display: block;
-        }
-        .product-info {
-            min-height: 102px;
-            display: flex;
-            flex-direction: column;
-            justify-content: flex-start;
-            align-items: center;
-            width: 100%;
-        }
-        .product-card h3 {
-            font-size: 1.17em;
-            margin: 7px 0 4px 0;
-            color: #191813;
-            font-weight: bold;
-            text-align: center;
-            width: 100%;
-            letter-spacing: 0.05em;
-        }
-        .product-card p {
-            font-size: 14px;
-            margin: 3px 0 0 0;
-            color: #444;
-            text-align: center;
-            width: 100%;
-        }
-        .product-card input {
-            width: 100%;
-            padding: 10px;
-            margin: 15px 0 10px 0;
-            border-radius: 7px;
-            border: 1px solid #eee1b9;
-            font-size: 15px;
-        }
-        .product-card .loan-btn,
-        .product-card button {
-            background: linear-gradient(90deg, #f7b733 0%, #fcf6ba 100%);
-            color: #965700 !important;
-            padding: 7px 24px;
-            font-size: 1em;
-            font-weight: bold;
-            border: none;
-            border-radius: 9px;
-            cursor: pointer;
-            box-shadow: 0 3px 12px #f7b73333;
-            transition: background 0.3s, transform 0.2s, box-shadow 0.2s;
-            letter-spacing: 0.5px;
-            width: auto;
-            margin-top: 0;
-            margin-bottom: 0;
-            display: inline-block;
-            align-self: center;
-            min-width: 0;
-        }
-        .product-card .loan-btn:hover,
-        .product-card button:hover {
-            background: linear-gradient(90deg, #fcf6ba 0%, #f7b733 100%);
-            color: #b37900 !important;
-            transform: translateY(-2px) scale(1.03);
-            box-shadow: 0 6px 22px #f7b73333;
-        }
-        @media (max-width: 1100px) { }
-        @media (max-width: 800px) { }
-        @media (max-width: 600px) {
-            .container {
-                padding: 0.5em;
-            }
-            .product-card img, .product-img-placeholder {
-                height: 55px;
-            }
-            .product-info {
-                min-height: 120px;
-            }
-        }
-        .grid {
-            display: grid;
-            grid-template-columns: repeat(4, 1fr);
-            gap: 36px 20px;
-        }
-        @media (max-width: 1000px) {
-            .grid {
-                grid-template-columns: 1fr 1fr;
-            }
-        }
-        @media (max-width: 600px) {
-            .grid {
-                grid-template-columns: 1fr;
-                gap: 16px 0;
-            }
-            .product-card img, .product-img-placeholder {
-                height: 48px !important;
-                max-height: 48px !important;
-            }
-            .product-info {
-                min-height: 50px !important;
-                margin-bottom: 0 !important;
-                padding-bottom: 0 !important;
-            }
-            .product-row {
-                margin-bottom: 2px !important;
-                padding-bottom: 0 !important;
-            }
-            .deposit-form {
-                margin-top: 4px !important;
-                margin-bottom: 0 !important;
-                padding-bottom: 0 !important;
-            }
-            .deposit-form label,
-            .deposit-form input {
-                margin-top: 0 !important;
-                margin-bottom: 4px !important;
-                padding-top: 0 !important;
-                padding-bottom: 0 !important;
-            }
-        }
+html, body { height: 100%; min-height: 100%; box-sizing: border-box; }
+body { display: flex; flex-direction: column; min-height: 100vh; background: #fffdf7; }
+header { flex-shrink: 0; }
+.container { max-width: 1200px; margin: 28px auto 0 auto; padding: 18px 5px 0 5px; flex: 1 0 auto; }
+h2 { text-align: center; margin-bottom: 12px; }
+.product-card { background: #fff; border-radius: 16px; box-shadow: 0 6px 28px -7px rgba(0,0,0,0.10); padding: 20px 18px 22px 18px; text-align: center; display: flex; flex-direction: column; align-items: center; min-width: 0; min-height: 0; border: none; transition: box-shadow 0.16s; }
+.product-card:hover { box-shadow: 0 12px 36px -9px #f7b73355; }
+.product-card img, .product-img-placeholder { width: 100%; height: 90px; object-fit: cover; border-radius: 10px 10px 0 0; margin-bottom: 12px; box-shadow: 0 2px 8px rgba(0,0,0,0.04); background: #f7f2e9; display: block; }
+.product-info { min-height: 102px; display: flex; flex-direction: column; justify-content: flex-start; align-items: center; width: 100%; }
+.product-card h3 { font-size: 1.17em; margin: 7px 0 4px 0; color: #191813; font-weight: bold; text-align: center; width: 100%; letter-spacing: 0.05em; }
+.product-card p { font-size: 14px; margin: 3px 0 0 0; color: #444; text-align: center; width: 100%; }
+.product-card input { width: 100%; padding: 10px; margin: 15px 0 10px 0; border-radius: 7px; border: 1px solid #eee1b9; font-size: 15px; }
+.product-card .loan-btn, .product-card button { background: linear-gradient(90deg, #f7b733 0%, #fcf6ba 100%); color: #965700 !important; padding: 7px 24px; font-size: 1em; font-weight: bold; border: none; border-radius: 9px; cursor: pointer; box-shadow: 0 3px 12px #f7b73333; transition: background 0.3s, transform 0.2s, box-shadow 0.2s; letter-spacing: 0.5px; width: auto; margin-top: 0; margin-bottom: 0; display: inline-block; align-self: center; min-width: 0; }
+.product-card .loan-btn:hover, .product-card button:hover { background: linear-gradient(90deg, #fcf6ba 0%, #f7b733 100%); color: #b37900 !important; transform: translateY(-2px) scale(1.03); box-shadow: 0 6px 22px #f7b73333; }
+@media (max-width: 600px) {
+  .container { padding: 0.5em; }
+  .product-card img, .product-img-placeholder { height: 48px !important; max-height: 48px !important; }
+  .product-info { min-height: 50px !important; margin-bottom: 0 !important; padding-bottom: 0 !important; }
+  .grid { grid-template-columns: 1fr; gap: 16px 0; }
+}
+.grid { display: grid; grid-template-columns: repeat(4, 1fr); gap: 36px 20px; }
+@media (max-width: 1000px) { .grid { grid-template-columns: 1fr 1fr; } }
+@media (max-width: 600px) { .grid { grid-template-columns: 1fr; gap: 16px 0; } }
 </style>
 </head>
 <body>
-<div id="toast" style="
-  display:none;
-  position:fixed;
-  bottom:20px;
-  left:50%;
-  transform:translateX(-50%);
-  background:#3E9F50;
-  color:white;
-  padding:12px 20px;
-  border-radius:8px;
-  font-size:0.95em;
-  box-shadow:0 4px 12px rgba(0,0,0,0.2);
-  z-index:9999;
-  transition:opacity 0.3s ease;
-">
+<div id="toast" style="display:none; position:fixed; bottom:20px; left:50%; transform:translateX(-50%); background:#3E9F50; color:white; padding:12px 20px; border-radius:8px; font-size:0.95em; box-shadow:0 4px 12px rgba(0,0,0,0.2); z-index:9999; transition:opacity 0.3s ease;">
   Added to cart!
 </div>
-
 <header>
 <div class="header-bar">
 <h1>WattSun Solar</h1>
@@ -213,84 +57,136 @@
 <h2>Available Solar Systems</h2>
 <p style="text-align:center; font-style:italic; color:#666;">
         Note: A minimum deposit of 50% is required for installation to commence.
-    </p>
+</p>
 <div class="grid">
-<div class="product-card">
-<img alt="1kW Solar System" src="images/solar1kw.jpg"/>
-<div class="product-info">
-<h3>1 kW Solar System</h3>
-<p>Total Price: KES 150,000</p>
-</div>
-<input id="dep1" placeholder="Enter your deposit (KES)" type="number"/>
-<button class="loan-btn" onclick="addToCart('1 kW Solar System', 150000, 'dep1')">Add to Cart</button>
-</div>
-<div class="product-card">
-<img alt="3kW Solar System" src="images/solar3kw.jpg"/>
-<div class="product-info">
-<h3>3 kW Solar System</h3>
-<p>Total Price: KES 400,000</p>
-</div>
-<input id="dep3" placeholder="Enter your deposit (KES)" type="number"/>
-<button class="loan-btn" onclick="addToCart('3 kW Solar System', 400000, 'dep3')">Add to Cart</button>
-</div>
-<div class="product-card">
-<img alt="6kW Solar System" src="images/solar6kw.jpg"/>
-<div class="product-info">
-<h3>6 kW Solar System</h3>
-<p>Total Price: KES 700,000</p>
-</div>
-<input id="dep6" placeholder="Enter your deposit (KES)" type="number"/>
-<button class="loan-btn" onclick="addToCart('6 kW Solar System', 700000, 'dep6')">Add to Cart</button>
-</div>
-<div class="product-card">
-<img alt="9kW Solar System" src="images/solar9kw.jpg"/>
-<div class="product-info">
-<h3>9 kW Solar System</h3>
-<p>Total Price: KES 1,050,000</p>
-</div>
-<input id="dep9" placeholder="Enter your deposit (KES)" type="number"/>
-<button class="loan-btn" onclick="addToCart('9 kW Solar System', 1050000, 'dep9')">Add to Cart</button>
-</div>
-<div class="product-card">
-<img alt="450W Monocrystalline Solar Panel" src="images/panel450w.jpg"/>
-<div class="product-info">
-<h3>450W Monocrystalline Solar Panel</h3>
-<p>High efficiency solar module for home &amp; industrial use.</p>
-<p>Total Price: KES 29,000</p>
-</div>
-<input id="dep_panel" placeholder="Enter your deposit (KES)" type="number"/>
-<button class="loan-btn" onclick="addToCart('450W Monocrystalline Solar Panel', 29000, 'dep_panel')">Add to Cart</button>
-</div>
-<div class="product-card">
-<div class="product-img-placeholder"></div>
-<div class="product-info">
-<h3>Battery 24V 100Ah</h3>
-<p>LiFePO₄ Battery 24V 100Ah – Safe lithium storage with long life and fast charge.</p>
-<p>Total Price: KES 60,000</p>
-</div>
-<input id="dep_batt24" placeholder="Enter your deposit (KES)" type="number"/>
-<button class="loan-btn" onclick="addToCart('Battery 24V 100Ah', 60000, 'dep_batt24')">Add to Cart</button>
-</div>
-<div class="product-card">
-<div class="product-img-placeholder"></div>
-<div class="product-info">
-<h3>Solar Cleaning Kit</h3>
-<p>Essential tools for keeping your system at peak efficiency.</p>
-<p>Total Price: KES 4,500</p>
-</div>
-<input id="dep_cleaning" placeholder="Enter your deposit (KES)" type="number"/>
-<button class="loan-btn" onclick="addToCart('Solar Cleaning Kit', 4500, 'dep_cleaning')">Add to Cart</button>
-</div>
-<div class="product-card">
-<div class="product-img-placeholder"></div>
-<div class="product-info">
-<h3>5kW Inverter</h3>
-<p>Seamlessly manage solar and grid power with hybrid tech.</p>
-<p>Total Price: KES 85,000</p>
-</div>
-<input id="dep_inv5kw" placeholder="Enter your deposit (KES)" type="number"/>
-<button class="loan-btn" onclick="addToCart('5kW Inverter', 85000, 'dep_inv5kw')">Add to Cart</button>
-</div>
+  <div class="product-card">
+    <img alt="1kW Solar System" src="images/solar1kw.jpg"/>
+    <div class="product-info">
+      <h3>1 kW Solar System</h3>
+      <p>Best for small homes, bedsitters, or shops. Runs lights, TV, phone/laptop, and a small fridge for backup.</p>
+      <p>Total Price: KES 150,000</p>
+    </div>
+    <input id="dep1" placeholder="Enter your deposit (KES)" type="number"/>
+    <button class="loan-btn"
+      onclick="addToCart(
+        '1 kW Solar System',
+        150000,
+        'dep1',
+        'Best for small homes, bedsitters, or shops. Runs lights, TV, phone/laptop, and a small fridge for backup.'
+      )">Add to Cart</button>
+  </div>
+  <div class="product-card">
+    <img alt="3kW Solar System" src="images/solar3kw.jpg"/>
+    <div class="product-info">
+      <h3>3 kW Solar System</h3>
+      <p>For medium homes, small offices, kiosks or shops. Handles lighting, TV, freezer, up to 2 fridges, iron, microwave, and essential business loads.</p>
+      <p>Total Price: KES 400,000</p>
+    </div>
+    <input id="dep3" placeholder="Enter your deposit (KES)" type="number"/>
+    <button class="loan-btn"
+      onclick="addToCart(
+        '3 kW Solar System',
+        400000,
+        'dep3',
+        'For medium homes, small offices, kiosks or shops. Handles lighting, TV, freezer, up to 2 fridges, iron, microwave, and essential business loads.'
+      )">Add to Cart</button>
+  </div>
+  <div class="product-card">
+    <img alt="6kW Solar System" src="images/solar6kw.jpg"/>
+    <div class="product-info">
+      <h3>6 kW Solar System</h3>
+      <p>Large homes, small businesses, restaurants. Runs multiple kitchen devices (fridge, freezer, microwave, fryer), computers, CCTV, Wi-Fi, lighting.</p>
+      <p>Total Price: KES 700,000</p>
+    </div>
+    <input id="dep6" placeholder="Enter your deposit (KES)" type="number"/>
+    <button class="loan-btn"
+      onclick="addToCart(
+        '6 kW Solar System',
+        700000,
+        'dep6',
+        'Large homes, small businesses, restaurants. Runs multiple kitchen devices (fridge, freezer, microwave, fryer), computers, CCTV, Wi-Fi, lighting.'
+      )">Add to Cart</button>
+  </div>
+  <div class="product-card">
+    <img alt="9kW Solar System" src="images/solar9kw.jpg"/>
+    <div class="product-info">
+      <h3>9 kW Solar System</h3>
+      <p>Large home or mid-sized business, partial kitchen for fast food. All of above plus 3 kitchen devices at once: commercial freezer, fryer, coffee machine.</p>
+      <p>Total Price: KES 1,050,000</p>
+    </div>
+    <input id="dep9" placeholder="Enter your deposit (KES)" type="number"/>
+    <button class="loan-btn"
+      onclick="addToCart(
+        '9 kW Solar System',
+        1050000,
+        'dep9',
+        'Large home or mid-sized business, partial kitchen for fast food. All of above plus 3 kitchen devices at once: commercial freezer, fryer, coffee machine.'
+      )">Add to Cart</button>
+  </div>
+  <div class="product-card">
+    <img alt="450W Monocrystalline Solar Panel" src="images/panel450w.jpg"/>
+    <div class="product-info">
+      <h3>450W Monocrystalline Solar Panel</h3>
+      <p>High efficiency solar module for home &amp; industrial use.</p>
+      <p>Total Price: KES 29,000</p>
+    </div>
+    <input id="dep_panel" placeholder="Enter your deposit (KES)" type="number"/>
+    <button class="loan-btn"
+      onclick="addToCart(
+        '450W Monocrystalline Solar Panel',
+        29000,
+        'dep_panel',
+        'High efficiency solar module for home & industrial use.'
+      )">Add to Cart</button>
+  </div>
+  <div class="product-card">
+    <div class="product-img-placeholder"></div>
+    <div class="product-info">
+      <h3>Battery 24V 100Ah</h3>
+      <p>LiFePO₄ Battery 24V 100Ah – Safe lithium storage with long life and fast charge.</p>
+      <p>Total Price: KES 60,000</p>
+    </div>
+    <input id="dep_batt24" placeholder="Enter your deposit (KES)" type="number"/>
+    <button class="loan-btn"
+      onclick="addToCart(
+        'Battery 24V 100Ah',
+        60000,
+        'dep_batt24',
+        'LiFePO₄ Battery 24V 100Ah – Safe lithium storage with long life and fast charge.'
+      )">Add to Cart</button>
+  </div>
+  <div class="product-card">
+    <div class="product-img-placeholder"></div>
+    <div class="product-info">
+      <h3>Solar Cleaning Kit</h3>
+      <p>Essential tools for keeping your system at peak efficiency.</p>
+      <p>Total Price: KES 4,500</p>
+    </div>
+    <input id="dep_cleaning" placeholder="Enter your deposit (KES)" type="number"/>
+    <button class="loan-btn"
+      onclick="addToCart(
+        'Solar Cleaning Kit',
+        4500,
+        'dep_cleaning',
+        'Essential tools for keeping your system at peak efficiency.'
+      )">Add to Cart</button>
+  </div>
+  <div class="product-card">
+    <div class="product-img-placeholder"></div>
+    <div class="product-info">
+      <h3>5kW Inverter</h3>
+      <p>Seamlessly manage solar and grid power with hybrid tech.</p>
+      <p>Total Price: KES 85,000</p>
+    </div>
+    <input id="dep_inv5kw" placeholder="Enter your deposit (KES)" type="number"/>
+    <button class="loan-btn"
+      onclick="addToCart(
+        '5kW Inverter',
+        85000,
+        'dep_inv5kw',
+        'Seamlessly manage solar and grid power with hybrid tech.'
+      )">Add to Cart</button>
+  </div>
 </div>
 </div>
 <footer>
@@ -336,7 +232,7 @@
 
 <script>
 document.addEventListener("DOMContentLoaded", function () {
-  window.addToCart = function(item, price, inputId) {
+  window.addToCart = function(item, price, inputId, description) {
     const depositValue = document.getElementById(inputId).value;
     const deposit = Number(depositValue);
     if (!deposit || isNaN(deposit) || deposit <= 0) {
@@ -348,12 +244,14 @@ document.addEventListener("DOMContentLoaded", function () {
     if (index !== -1) {
       cart[index].quantity = (cart[index].quantity || 1) + 1;
       cart[index].deposit = deposit;
+      if (description) cart[index].description = description;
     } else {
       cart.push({
         name: item,
         price: price,
         deposit: deposit,
-        quantity: 1
+        quantity: 1,
+        description: description || ""
       });
     }
     localStorage.setItem("cart", JSON.stringify(cart));
