--- a/calculator.html
+++ b/calculator.html
@@ -7,169 +7,27 @@
   <link href="main.css" rel="stylesheet"/>
   <style>
     body { background: #fafafa; }
-    .container {
-      width: 100%;
-      max-width: 600px;
-      margin: 44px auto 40px auto;
-      background: #fff;
-      border-radius: 18px;
-      box-shadow: 0 4px 22px rgba(44,62,80,0.10);
-      padding: 38px 22px 34px 22px;
-    }
+    .container { width: 100%; max-width: 600px; margin: 44px auto 40px auto; background: #fff; border-radius: 18px; box-shadow: 0 4px 22px rgba(44,62,80,0.10); padding: 38px 22px 34px 22px; }
     .result-flash { background: #fffbe7 !important; transition: background 0.7s; }
-    .calc-grid {
-      display: grid;
-      grid-template-columns: 1fr 90px;
-      gap: 0 8px;
-      align-items: center;
-    }
+    .calc-grid { display: grid; grid-template-columns: 1fr 90px; gap: 0 8px; align-items: center; }
     .calc-section.collapsed .calc-section-body { display: none; }
-    .calc-section-header {
-      font-size: 1.13em;
-      font-weight: bold;
-      color: #184211;
-      cursor: pointer;
-      display: flex;
-      align-items: center;
-      gap: 8px;
-      padding: 9px 0;
-      user-select: none;
-    }
-    .calc-chevron {
-      font-size: 1.2em;
-      transition: transform 0.2s;
-      color: #b39708;
-    }
+    .calc-section-header { font-size: 1.13em; font-weight: bold; color: #184211; cursor: pointer; display: flex; align-items: center; gap: 8px; padding: 9px 0; user-select: none; }
+    .calc-chevron { font-size: 1.2em; transition: transform 0.2s; color: #b39708; }
     .calc-section.collapsed .calc-chevron { transform: rotate(-90deg);}
-    .calc-btn-row {
-      display: flex;
-      flex-direction: column;
-      gap: 9px;
-      margin-top: 12px;
-    }
-    .btn-main, .calc-btn-row button, .calc-btn-row a {
-      padding: 13px 0;
-      width: 94%;
-      max-width: 350px;
-      font-size: 1.08em;
-      border: none;
-      border-radius: 24px;
-      font-weight: 600;
-      box-shadow: 0 2px 14px rgba(247,183,51,0.11);
-      background: linear-gradient(90deg, #f7b733 0%, #fcf6ba 100%);
-      color: #184211;
-      transition: background 0.15s, color 0.12s, transform 0.1s;
-      text-decoration: none;
-      margin: 0 auto;
-      cursor: pointer;
-      text-align: center;
-      display: block;
-    }
-    .calc-btn-row button:hover, .calc-btn-row a:hover, .btn-main:hover {
-      background: linear-gradient(90deg, #fcf6ba 0%, #f7b733 100%);
-      color: #b37900 !important;
-      transform: translateY(-1px) scale(1.02);
-    }
-    .calc-btn-row .secondary {
-      background: #eee;
-      color: #555;
-      border: 1px solid #d5c99c;
-    }
-    .calc-btn-row .secondary:hover {
-      background: #ffe180;
-      color: #7a6000;
-    }
-    #sizingPanel {
-      position: fixed; top: 0; right: -420px; width: 390px; height: 100vh; z-index: 2001;
-      background: #fffbeef6; box-shadow: -3px 0 24px 0 #efd97d55; border-left: 3px solid #f7b733;
-      overflow-y: auto; transition: right 0.28s cubic-bezier(.73,.11,.41,.95);
-      padding: 28px 19px 22px 19px; display: flex; flex-direction: column;
-    }
-    #sizingOverlay {
-      display: none; position: fixed; top: 0; left: 0; width: 100vw; height: 100vh; background: #0005; z-index: 2000;
-    }
-    input[type="number"] {
-      width: 94%;
-      max-width: 350px;
-      padding: 10px;
-      font-size: 1em;
-      border-radius: 12px;
-      border: 1px solid #ccc;
-      box-sizing: border-box;
-      margin: 0 auto 10px auto;
-      display: block;
-    }
-    @media (max-width: 700px) {
-      .container { max-width: 97vw; width: 100vw !important; border-radius: 0 !important; padding-left: 2vw !important; padding-right: 2vw !important; }
-      .calc-grid { grid-template-columns: 1fr !important; gap: 2px 0 !important; }
-      #sizingPanel { width: 98vw !important; min-width: 0 !important; right: -102vw !important; padding-left: 4vw !important; padding-right: 4vw !important; border-radius: 18px 0 0 0 !important;}
-      .calc-section-header { font-size: 1.1em !important; padding: 8px 0 !important; }
-      .calc-section-body label, .calc-section-body input { width: 100% !important; max-width: 100vw !important; font-size: 1em !important;}
-      h2 { font-size: 1.3em !important; word-break: break-word;}
-      .btn-main, .calc-btn-row button, .calc-btn-row a { min-width: 0 !important; font-size: 1em !important;}
-    }
-    @media (max-width: 768px) {
-      .nav-toggle {
-        display: block;
-        font-size: 1.8em;
-        background: none;
-        border: none;
-        color: white;
-      }
-      header nav {
-        display: none;
-        flex-direction: column;
-        background-color: #ffb347;
-        width: 100%;
-        text-align: center;
-      }
-      header.nav-open nav { display: flex; }
-      .calc-grid { grid-template-columns: 1fr !important; gap: 8px 0 !important; }
-    }
-    /* For accessibility & consistent widths */
-    .calculator-form input[type="number"], .calculator-form button.loan-btn {
-      border-radius: 24px;
-    }
-    .loan-btn {
-      padding: 14px 0;
-      font-size: 1.1em;
-      font-weight: 600;
-      border: none;
-      background: linear-gradient(90deg, #f7b733 0%, #fcf6ba 100%);
-      box-shadow: 0 2px 14px rgba(247,183,51,0.11);
-      color: #184211;
-      cursor: pointer;
-      transition: background 0.15s, color 0.12s, transform 0.1s;
-      margin: 22px auto 0 auto;
-      width: 94%;
-      max-width: 350px;
-      display: block;
-    }
-    /* --- Notification Bubble --- */
-    .cart-notification {
-      position: fixed;
-      left: 50%;
-      bottom: 40px;
-      transform: translateX(-50%);
-      z-index: 3000;
-      background: #184211;
-      color: #fffbe7;
-      font-weight: 600;
-      font-size: 1.13em;
-      border-radius: 28px;
-      padding: 13px 32px;
-      box-shadow: 0 4px 18px #b3970833;
-      opacity: 0;
-      pointer-events: none;
-      transition: opacity 0.35s, bottom 0.35s;
-      display: none;
-    }
-    .cart-notification.show {
-      opacity: 1;
-      bottom: 80px;
-      pointer-events: auto;
-      display: block;
-    }
+    .calc-btn-row { display: flex; flex-direction: column; gap: 9px; margin-top: 12px; }
+    .btn-main, .calc-btn-row button, .calc-btn-row a { padding: 13px 0; width: 94%; max-width: 350px; font-size: 1.08em; border: none; border-radius: 24px; font-weight: 600; box-shadow: 0 2px 14px rgba(247,183,51,0.11); background: linear-gradient(90deg, #f7b733 0%, #fcf6ba 100%); color: #184211; transition: background 0.15s, color 0.12s, transform 0.1s; text-decoration: none; margin: 0 auto; cursor: pointer; text-align: center; display: block; }
+    .calc-btn-row button:hover, .calc-btn-row a:hover, .btn-main:hover { background: linear-gradient(90deg, #fcf6ba 0%, #f7b733 100%); color: #b37900 !important; transform: translateY(-1px) scale(1.02); }
+    .calc-btn-row .secondary { background: #eee; color: #555; border: 1px solid #d5c99c; }
+    .calc-btn-row .secondary:hover { background: #ffe180; color: #7a6000; }
+    #sizingPanel { position: fixed; top: 0; right: -420px; width: 390px; height: 100vh; z-index: 2001; background: #fffbeef6; box-shadow: -3px 0 24px 0 #efd97d55; border-left: 3px solid #f7b733; overflow-y: auto; transition: right 0.28s cubic-bezier(.73,.11,.41,.95); padding: 28px 19px 22px 19px; display: flex; flex-direction: column; }
+    #sizingOverlay { display: none; position: fixed; top: 0; left: 0; width: 100vw; height: 100vh; background: #0005; z-index: 2000; }
+    input[type="number"] { width: 94%; max-width: 350px; padding: 10px; font-size: 1em; border-radius: 12px; border: 1px solid #ccc; box-sizing: border-box; margin: 0 auto 10px auto; display: block; }
+    @media (max-width: 700px) { .container { max-width: 97vw; width: 100vw !important; border-radius: 0 !important; padding-left: 2vw !important; padding-right: 2vw !important; } .calc-grid { grid-template-columns: 1fr !important; gap: 2px 0 !important; } #sizingPanel { width: 98vw !important; min-width: 0 !important; right: -102vw !important; padding-left: 4vw !important; padding-right: 4vw !important; border-radius: 18px 0 0 0 !important;} .calc-section-header { font-size: 1.1em !important; padding: 8px 0 !important; } .calc-section-body label, .calc-section-body input { width: 100% !important; max-width: 100vw !important; font-size: 1em !important;} h2 { font-size: 1.3em !important; word-break: break-word;} .btn-main, .calc-btn-row button, .calc-btn-row a { min-width: 0 !important; font-size: 1em !important;} }
+    @media (max-width: 768px) { .nav-toggle { display: block; font-size: 1.8em; background: none; border: none; color: white; } header nav { display: none; flex-direction: column; background-color: #ffb347; width: 100%; text-align: center; } header.nav-open nav { display: flex; } .calc-grid { grid-template-columns: 1fr !important; gap: 8px 0 !important; } }
+    .calculator-form input[type="number"], .calculator-form button.loan-btn { border-radius: 24px; }
+    .loan-btn { padding: 14px 0; font-size: 1.1em; font-weight: 600; border: none; background: linear-gradient(90deg, #f7b733 0%, #fcf6ba 100%); box-shadow: 0 2px 14px rgba(247,183,51,0.11); color: #184211; cursor: pointer; transition: background 0.15s, color 0.12s, transform 0.1s; margin: 22px auto 0 auto; width: 94%; max-width: 350px; display: block; }
+    .cart-notification { position: fixed; left: 50%; bottom: 40px; transform: translateX(-50%); z-index: 3000; background: #184211; color: #fffbe7; font-weight: 600; font-size: 1.13em; border-radius: 28px; padding: 13px 32px; box-shadow: 0 4px 18px #b3970833; opacity: 0; pointer-events: none; transition: opacity 0.35s, bottom 0.35s; display: none; }
+    .cart-notification.show { opacity: 1; bottom: 80px; pointer-events: auto; display: block; }
   </style>
 </head>
 <body>
@@ -327,34 +185,40 @@
   </div>
 </footer>
 <script>
-  // Hamburger nav for mobile
   function toggleNav() {
     document.querySelector('header').classList.toggle('nav-open');
   }
-  // Accordion toggle
   function toggleSection(sectionId) {
     var sec = document.getElementById(sectionId);
     sec.classList.toggle('collapsed');
   }
-  // Prevent decimals/leading zeros/non-integers
   function sanitizeInput(input) {
     let val = input.value.replace(/^0+/, '');
     val = val.replace(/[^0-9]/g, '');
     input.value = val === '' ? '0' : String(Number(val));
   }
-  // Solar kit options
+
+  // SHOP KIT DESCRIPTIONS
+  const kitDescriptions = {
+    "1kW Kit": "Best for bedsitters, small homes or shops. Runs lights, TV, phone/laptop charging, and a small fridge for basic backup.",
+    "3kW Kit": "For medium homes, small offices, kiosks or shops. Handles lighting, TV, freezer, up to 2 fridges, iron, microwave, and essential business loads.",
+    "6kW Kit": "Large homes, small businesses, restaurants. Runs multiple kitchen devices (fridge, freezer, microwave, fryer), computers, CCTV, Wi-Fi, lighting.",
+    "9kW Kit": "Large home or mid-sized business, partial kitchen for fast food. All of above plus 3 kitchen devices at once: commercial freezer, fryer, coffee machine.",
+    "12kW Kit": "Full backup for large businesses, supermarkets, or fast food. Runs all above plus several fryers/ovens/fridges, AC, IT loads, coffee and more."
+  };
+
   const kits = [
-    { name: '1kW Kit',    maxW: 1000, price: 120000 },
-    { name: '3kW Kit',    maxW: 3000, price: 320000 },
-    { name: '6kW Kit',    maxW: 6000, price: 590000 },
-    { name: '9kW Kit',    maxW: 9000, price: 850000 },
-    { name: '12kW Kit',   maxW: 12000, price: 1150000 }
+    { name: '1kW Kit',    maxW: 1000, price: 120000, description: kitDescriptions["1kW Kit"] },
+    { name: '3kW Kit',    maxW: 3000, price: 320000, description: kitDescriptions["3kW Kit"] },
+    { name: '6kW Kit',    maxW: 6000, price: 590000, description: kitDescriptions["6kW Kit"] },
+    { name: '9kW Kit',    maxW: 9000, price: 850000, description: kitDescriptions["9kW Kit"] },
+    { name: '12kW Kit',   maxW: 12000, price: 1150000, description: kitDescriptions["12kW Kit"] }
   ];
-  // Appliance power ratings
   const applianceWatts = {
     led_bulb: 10, tv: 60, fridge: 150, laptop: 60, phone: 5, radio: 15, fan: 40, pump: 250, iron: 1000, kettle: 1500, cooker: 1500,
     microwave: 1200, oven: 2500, freezer: 300, washer: 1200, heater: 2000, ac: 1500, tools: 1200, borehole: 2000, cctv: 150
   };
+
   function calculateKit() {
     let totalWatt = 0;
     let form = document.getElementById('solarForm');
@@ -381,25 +245,28 @@
       <b>Total Estimated Power:</b> ${totalWatt} W<br>
       <b>Estimated Price:</b> KES ${kit.price.toLocaleString()}<br><br>
       <div class="calc-btn-row">
-        <button type="button" onclick="addToCartFromCalculator('${kit.name}', ${kit.price})">Buy Now</button>
+        <button type="button" class="buy-now-btn" data-kit="${kit.name}">Buy Now</button>
         <a href="solutions.html" class="secondary">Back to Solutions</a>
       </div>
       </div>
     `;
   }
-  // Buy Now adds to cart with notification bubble
+
   function addToCartFromCalculator(itemName, price) {
     let cart = JSON.parse(localStorage.getItem("cart")) || [];
+    // Find kit info for description
+    const kitInfo = kits.find(k => k.name === itemName);
+    const description = kitInfo ? kitInfo.description : "";
     const index = cart.findIndex(prod => prod.name === itemName);
     if (index !== -1) {
       cart[index].quantity = (cart[index].quantity || 1) + 1;
     } else {
-      cart.push({ name: itemName, price: price, deposit: 0, quantity: 1 });
+      cart.push({ name: itemName, price: price, deposit: 0, quantity: 1, description: description });
     }
     localStorage.setItem("cart", JSON.stringify(cart));
     showCartNotification(itemName + " added to cart!");
   }
-  // Show notification bubble (like in shop.html)
+
   function showCartNotification(message) {
     var notif = document.getElementById('cart-notification');
     notif.textContent = message;
@@ -411,6 +278,17 @@
       setTimeout(() => { notif.style.display = "none"; }, 400);
     }, 1600);
   }
+
+  // Event delegation for dynamic Buy Now buttons
+  document.addEventListener("click", function(event) {
+    if (event.target.classList.contains("buy-now-btn")) {
+      const kitName = event.target.getAttribute("data-kit");
+      const kitInfo = kits.find(k => k.name === kitName);
+      if (!kitInfo) return;
+      addToCartFromCalculator(kitInfo.name, kitInfo.price);
+    }
+  });
+
   // Sizing Table Side Panel Logic
   const showBtn = document.getElementById('showSizingBtn');
   const sizingPanel = document.getElementById('sizingPanel');
@@ -429,7 +307,7 @@
   showBtn.onclick = openSizingPanel;
   sizingOverlay.onclick = closeSizingPanel;
   closeBtn.onclick = closeSizingPanel;
-  // Close nav on click outside for mobile
+
   document.addEventListener('DOMContentLoaded', function() {
     document.body.addEventListener('click', function(e) {
       const header = document.querySelector('header');
