--- a/checkout.html
+++ b/checkout.html
@@ -206,7 +206,6 @@ td.checkout-desc-tooltip {
   color: #7a6000 !important;
 }
 @media (max-width:1000px) { .container { max-width: 98vw; padding: 16px 2vw; } }
-/* Hamburger & mobile nav styles */
 .nav-toggle {
   display: none;
   font-size: 2rem;
@@ -256,33 +255,15 @@ td.checkout-desc-tooltip {
   }
 }
 @media (max-width: 700px) {
-  .header-bar h1 {
-    font-size: 1.4em;
-  }
+  .header-bar h1 { font-size: 1.4em; }
   th.checkout-desc-tooltip, td.checkout-desc-tooltip { display: none !important; }
   th.col-desc, td.col-desc, th.col-unit, td.col-unit, th.col-total-deposit, td.col-total-deposit { display: none !important; }
   td.product-col { width: 54vw !important; min-width: 60px !important; max-width: 100vw !important; }
   .container, .table-wrapper, table { width: 100vw !important; max-width: 100vw !important; }
-  .checkout-actions {
-    flex-direction: column !important;
-    align-items: center !important;
-    gap: 12px !important;
-  }
-  .checkout-actions .btn,
-  .checkout-actions .loan-btn {
-    width: 80vw !important;
-    max-width: 96vw !important;
-    min-width: 0 !important;
-    font-size: 1em;
-  }
-  .total {
-    font-size: 1em;
-    padding-right: 8vw;
-    padding-left: 1vw;
-  }
-  .table-wrapper, .container table {
-    border-radius: 10px;
-  }
+  .checkout-actions { flex-direction: column !important; align-items: center !important; gap: 12px !important; }
+  .checkout-actions .btn, .checkout-actions .loan-btn { width: 80vw !important; max-width: 96vw !important; min-width: 0 !important; font-size: 1em; }
+  .total { font-size: 1em; padding-right: 8vw; padding-left: 1vw; }
+  .table-wrapper, .container table { border-radius: 10px; }
 }
 </style>
 </head>
@@ -378,6 +359,11 @@ document.addEventListener("DOMContentLoaded", function () {
     return Number(num).toLocaleString('en-US');
   }
 
+  // Helper to truncate description for table column
+  function truncateDesc(desc) {
+    return desc && desc.length > 60 ? desc.substring(0, 57) + '...' : desc;
+  }
+
   function renderCart() {
     const cart = JSON.parse(localStorage.getItem("cart")) || [];
     const tbody = document.querySelector("#cartTable tbody");
@@ -387,7 +373,7 @@ document.addEventListener("DOMContentLoaded", function () {
     let cartSummaryArr = [];
 
     cart.forEach(item => {
-      const qty = 1;
+      const qty = item.quantity || 1;
       const desc = item.description || "";
       const deposit = item.deposit;
       const totalPrice = item.price * qty;
@@ -395,16 +381,16 @@ document.addEventListener("DOMContentLoaded", function () {
       totalDeposit += totalItemDeposit;
 
       cartSummaryArr.push(
-        `${item.name} (x1): Price ${item.price}, Deposit ${deposit}`
+        `${item.name} (x${qty}): Price ${item.price}, Deposit ${deposit}`
       );
 
       const row = document.createElement('tr');
       row.innerHTML = `
         <td class="product-col">${item.name}</td>
-        <td class="checkout-desc-tooltip" data-desc="${desc.replace(/"/g, '&quot;')}">${desc}</td>
+        <td class="checkout-desc-tooltip" data-desc="${desc.replace(/"/g, '&quot;')}">${truncateDesc(desc)}</td>
         <td class="col-unit">${formatNumber(item.price)}</td>
         <td>${formatNumber(deposit)}</td>
-        <td class="col-qty">1</td>
+        <td class="col-qty">${qty}</td>
         <td class="col-total">${formatNumber(totalPrice)}</td>
         <td class="col-total-deposit">${formatNumber(totalItemDeposit)}</td>
       `;
