--- a/cart.html
+++ b/cart.html
@@ -13,7 +13,8 @@ html, body {
 }
 body { background: #fafafa; }
 .container {
-  max-width: 680px;
+  max-width: 950px;
+  width: 95vw;
   margin: 44px auto;
   padding: 38px 12px 30px 12px;
   background: #fff;
@@ -46,19 +47,18 @@ table {
   border-radius: 10px;
   box-shadow: 0 1px 8px rgba(0,0,0,0.07);
   overflow: hidden;
-  table-layout: fixed;
+  table-layout: auto;
   font-size: 0.97em;
   box-sizing: border-box;
 }
 th, td {
   text-align: left;
-  padding: 14px 12px;
+  padding: 14px 8px;
   border-bottom: 1px solid #f2e2b6;
   font-size: 1em;
   white-space: nowrap;
   text-overflow: ellipsis;
   overflow: hidden;
-  max-width: 120px;
 }
 th {
   background-color: #f9eabb;
@@ -66,13 +66,28 @@ th {
   font-weight: bold;
   text-align: center;
 }
+/* Compact numeric columns */
+th.compact-col, td.compact-col {
+  width: 68px;
+  min-width: 48px;
+  max-width: 80px;
+  text-align: right;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  font-variant-numeric: tabular-nums;
+  padding-left: 0;
+  padding-right: 0;
+}
+/* Product column - widest */
 td.product-col {
   text-align: left;
   font-weight: 500;
-  width: 35%;
-  min-width: 110px;
-  max-width: 180px;
+  min-width: 180px;
+  max-width: 320px;
+  width: 38%;
   word-break: break-word;
+  white-space: normal;
 }
 .total {
   text-align: right;
@@ -206,6 +221,7 @@ td.product-col {
     width: 35% !important;
     min-width: 100px !important;
     max-width: 180px !important;
+    white-space: nowrap !important;
   }
   .actions {
     flex-direction: column !important;
@@ -244,6 +260,7 @@ td.product-col {
     width: 40% !important;
     min-width: 80px !important;
     max-width: 140px !important;
+    white-space: nowrap !important;
   }
   table {
     table-layout: fixed !important;
@@ -293,11 +310,11 @@ td.product-col {
 <thead>
 <tr>
 <th>Product</th>
-<th class="col-unit">Unit Price (KES)</th>
-<th>Deposit/Unit (KES)</th>
-<th>Quantity</th>
-<th>Total Price (KES)</th>
-<th class="col-total-deposit">Total Deposit (KES)</th>
+<th class="compact-col">Qty</th>
+<th class="compact-col">Price (KES)</th>
+<th class="compact-col">Deposit (KES)</th>
+<th class="compact-col">Total (KES)</th>
+<th class="compact-col">Deposit (KES)</th>
 </tr>
 </thead>
 <tbody></tbody>
@@ -351,11 +368,11 @@ document.addEventListener("DOMContentLoaded", function () {
       const row = document.createElement("tr");
       row.innerHTML = `
         <td class="product-col">${item.name}</td>
-        <td class="col-unit">${item.price.toLocaleString()}</td>
-        <td>${deposit.toLocaleString()}</td>
-        <td>${qty}</td>
-        <td>${totalPrice.toLocaleString()}</td>
-        <td class="col-total-deposit">${totalItemDeposit.toLocaleString()}</td>
+        <td class="compact-col">${qty}</td>
+        <td class="compact-col">${item.price.toLocaleString()}</td>
+        <td class="compact-col">${deposit.toLocaleString()}</td>
+        <td class="compact-col">${totalPrice.toLocaleString()}</td>
+        <td class="compact-col">${totalItemDeposit.toLocaleString()}</td>
       `;
       cartTable.appendChild(row);
     });
