--- a/checkout.html
+++ b/checkout.html
@@ -7,7 +7,7 @@
 <link href="main.css" rel="stylesheet"/>
 <style>
 .container {
-  max-width: 900px;
+  max-width: 950px;
   width: 98vw;
   margin: 44px auto 0 auto;
   padding: 38px 24px 30px 24px;
@@ -23,103 +23,88 @@ h2 {
   font-weight: bold;
   color: #b47d08;
 }
+/* --- CART TABLE STYLE --- */
 .table-wrapper {
   width: 100%;
+  max-width: 100%;
+  overflow-x: auto;
+  box-sizing: border-box;
   background: #fff;
-  margin-bottom: 18px;
-  border-radius: 12px;
+  border-radius: 10px;
 }
-.container table {
+.checkout-table {
   width: 100%;
-  table-layout: fixed;
   border-collapse: separate;
   border-spacing: 0;
   background: #fff;
-  border-radius: 12px;
-  overflow: hidden;
+  margin-bottom: 22px;
+  border-radius: 10px;
   box-shadow: 0 1px 8px rgba(0,0,0,0.07);
-  font-size: 1em;
-  margin: 0;
-  min-width: 0;
-}
-.container th, .container td {
-  padding: 10px 5px;
-  font-size: 1em;
-  white-space: nowrap;
   overflow: hidden;
-  text-overflow: ellipsis;
-  min-width: 36px;
-  vertical-align: middle;
-  text-align: center;
+  table-layout: auto;
+  font-size: 0.97em;
   box-sizing: border-box;
 }
-th {
+.checkout-table th, .checkout-table td {
+  text-align: left;
+  padding: 14px 12px;
+  border-bottom: 1px solid #f2e2b6;
+  font-size: 1em;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+.checkout-table th {
   background-color: #f9eabb;
   color: #444;
   font-weight: bold;
-  font-size: 1.05em;
+  text-align: center;
+  vertical-align: middle;
 }
-th.product-col, td.product-col { max-width: 130px; min-width: 90px; }
-th.checkout-desc-tooltip, td.checkout-desc-tooltip { max-width: 110px; min-width: 80px; }
-th.col-unit, td.col-unit { max-width: 90px; min-width: 70px; }
-th.col-qty, td.col-qty { min-width: 38px; max-width: 45px; width: 40px; }
-th.col-total, td.col-total { min-width: 95px; max-width: 120px; }
-th.col-total-deposit, td.col-total-deposit { min-width: 95px; max-width: 120px; }
-td.product-col {
+.checkout-table td.product-col {
   text-align: left;
   font-weight: 500;
-  min-width: 90px;
-  max-width: 130px;
+  min-width: 120px;
+  max-width: 180px;
+  width: 24%;
   word-break: break-word;
   white-space: normal;
 }
-td.checkout-desc-tooltip {
-  position: relative;
-  max-width: 110px;
-  min-width: 80px;
-  cursor: pointer;
-  background: none;
+.checkout-table td.desc-col {
+  min-width: 110px;
+  max-width: 230px;
+  width: 28%;
+  white-space: normal;
 }
-@media (min-width: 700px) {
-  td.checkout-desc-tooltip:hover::after {
-    content: attr(data-desc);
-    position: absolute;
-    left: 0;
-    top: 100%;
-    z-index: 99;
-    min-width: 180px;
-    max-width: 320px;
-    background: #fffbe8;
-    color: #222;
-    border: 1px solid #eccd7e;
-    border-radius: 9px;
-    box-shadow: 0 4px 18px #b47d0844;
-    font-size: 0.99em;
-    padding: 13px 16px;
-    white-space: normal;
-    word-break: break-word;
-    margin-top: 4px;
-    pointer-events: none;
-  }
-  td.checkout-desc-tooltip:hover {
-    background: #fcf6ba;
-    z-index: 20;
-  }
-}
-.total {
+.checkout-table th.compact-col, .checkout-table td.compact-col {
+  width: 70px;
+  min-width: 45px;
+  max-width: 90px;
   text-align: right;
-  margin-top: 10px;
-  font-size: 1.08em;
-  font-weight: bold;
-  color: #1ab13d;
-  letter-spacing: 0.3px;
-  padding-right: 18px;
-  background: #f9eabb;
-  border-radius: 0 0 14px 14px;
-  box-shadow: 0 1px 8px rgba(0,0,0,0.07);
-  max-width: 100%;
-  overflow-x: auto;
+  white-space: nowrap;
+  font-variant-numeric: tabular-nums;
+  padding-left: 0;
+  padding-right: 0;
+  vertical-align: middle;
 }
+.checkout-table th.compact-col {
+  line-height: 1.15;
+}
+.checkout-table th.compact-col br {
+  display: block;
+  margin: 0;
+  padding: 0;
+  content: "";
+}
+@media (max-width: 900px) {
+  .checkout-table th, .checkout-table td { font-size: 0.98em; }
+}
+@media (max-width: 700px) {
+  .checkout-table th, .checkout-table td { padding: 8px 4px; font-size: 0.96em; }
+  .checkout-table td.product-col { min-width: 80px; max-width: 120px; }
+  .checkout-table td.desc-col { min-width: 50px; max-width: 120px; }
+}
+/* --- FORM STYLE (unchanged) --- */
 .checkout-form {
   margin-top: 20px;
 }
@@ -256,14 +241,24 @@ td.checkout-desc-tooltip {
 }
 @media (max-width: 700px) {
   .header-bar h1 { font-size: 1.4em; }
-  th.checkout-desc-tooltip, td.checkout-desc-tooltip { display: none !important; }
-  th.col-desc, td.col-desc, th.col-unit, td.col-unit, th.col-total-deposit, td.col-total-deposit { display: none !important; }
-  td.product-col { width: 54vw !important; min-width: 60px !important; max-width: 100vw !important; }
+  .checkout-table td.product-col { min-width: 54vw !important; max-width: 100vw !important; }
   .container, .table-wrapper, table { width: 100vw !important; max-width: 100vw !important; }
   .checkout-actions { flex-direction: column !important; align-items: center !important; gap: 12px !important; }
   .checkout-actions .btn, .checkout-actions .loan-btn { width: 80vw !important; max-width: 96vw !important; min-width: 0 !important; font-size: 1em; }
-  .total { font-size: 1em; padding-right: 8vw; padding-left: 1vw; }
-  .table-wrapper, .container table { border-radius: 10px; }
+}
+.total {
+  text-align: right;
+  margin-top: 10px;
+  font-size: 1.08em;
+  font-weight: bold;
+  color: #1ab13d;
+  letter-spacing: 0.3px;
+  padding-right: 18px;
+  background: #f9eabb;
+  border-radius: 0 0 14px 14px;
+  box-shadow: 0 1px 8px rgba(0,0,0,0.07);
+  max-width: 100%;
+  overflow-x: auto;
 }
 </style>
 </head>
@@ -290,20 +285,20 @@ td.checkout-desc-tooltip {
 <div class="container">
 <h2>Checkout</h2>
 <div class="table-wrapper">
-<table id="cartTable">
-<thead>
-<tr>
-<th class="product-col">Product</th>
-<th class="checkout-desc-tooltip">Description</th>
-<th class="col-unit">Unit Price (KES)</th>
-<th>Deposit/Unit (KES)</th>
-<th class="col-qty">Qty</th>
-<th class="col-total">Total Price (KES)</th>
-<th class="col-total-deposit">Total Deposit (KES)</th>
-</tr>
-</thead>
-<tbody></tbody>
-</table>
+  <table id="cartTable" class="checkout-table">
+    <thead>
+      <tr>
+        <th class="product-col">Product</th>
+        <th class="desc-col">Description</th>
+        <th class="compact-col">Price<br>(KES)</th>
+        <th class="compact-col">Deposit<br>(KES)</th>
+        <th class="compact-col">Qty</th>
+        <th class="compact-col">Total<br>(KES)</th>
+        <th class="compact-col">Deposit<br>(KES)</th>
+      </tr>
+    </thead>
+    <tbody></tbody>
+  </table>
 </div>
 <div class="total" id="totalAmount">Total Deposit: KES 0</div>
 <form action="/thankyou.html" class="checkout-form" data-netlify="true" id="checkoutForm" method="POST" name="order" autocomplete="on">
@@ -387,12 +382,12 @@ document.addEventListener("DOMContentLoaded", function () {
       const row = document.createElement('tr');
       row.innerHTML = `
         <td class="product-col">${item.name}</td>
-        <td class="checkout-desc-tooltip" data-desc="${desc.replace(/"/g, '&quot;')}">${truncateDesc(desc)}</td>
-        <td class="col-unit">${formatNumber(item.price)}</td>
-        <td>${formatNumber(deposit)}</td>
-        <td class="col-qty">${qty}</td>
-        <td class="col-total">${formatNumber(totalPrice)}</td>
-        <td class="col-total-deposit">${formatNumber(totalItemDeposit)}</td>
+        <td class="desc-col">${truncateDesc(desc)}</td>
+        <td class="compact-col">${formatNumber(item.price)}</td>
+        <td class="compact-col">${formatNumber(deposit)}</td>
+        <td class="compact-col">${qty}</td>
+        <td class="compact-col">${formatNumber(totalPrice)}</td>
+        <td class="compact-col">${formatNumber(totalItemDeposit)}</td>
       `;
       tbody.appendChild(row);
     });
