--- a/calculator.html
+++ b/calculator.html
@@ -28,6 +28,42 @@
     .loan-btn { padding: 14px 0; font-size: 1.1em; font-weight: 600; border: none; background: linear-gradient(90deg, #f7b733 0%, #fcf6ba 100%); box-shadow: 0 2px 14px rgba(247,183,51,0.11); color: #184211; cursor: pointer; transition: background 0.15s, color 0.12s, transform 0.1s; margin: 22px auto 0 auto; width: 94%; max-width: 350px; display: block; }
     .cart-notification { position: fixed; left: 50%; bottom: 40px; transform: translateX(-50%); z-index: 3000; background: #184211; color: #fffbe7; font-weight: 600; font-size: 1.13em; border-radius: 28px; padding: 13px 32px; box-shadow: 0 4px 18px #b3970833; opacity: 0; pointer-events: none; transition: opacity 0.35s, bottom 0.35s; display: none; }
     .cart-notification.show { opacity: 1; bottom: 80px; pointer-events: auto; display: block; }
+
+    /* Cart Icon in NavBar */
+    .cart-icon-link {
+      position: relative;
+      display: inline-block;
+      text-decoration: none;
+      color: inherit;
+      vertical-align: middle;
+      margin-left: 10px;
+    }
+    .cart-icon {
+      font-size: 1.24em;
+      display: flex;
+      align-items: center;
+      position: relative;
+    }
+    .cart-count-badge {
+      position: absolute;
+      top: -0.7em;
+      right: -0.7em;
+      background: #19c37d;
+      color: #fff;
+      font-size: 0.8em;
+      min-width: 1.15em;
+      height: 1.15em;
+      border-radius: 50%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-weight: bold;
+      box-shadow: 0 0 0.13em #0001;
+      transition: background 0.2s;
+      pointer-events: none;
+      z-index: 1;
+      display: none;
+    }
   </style>
 </head>
 <body>
@@ -44,6 +80,14 @@
     <a href="financing.html">Financing</a>
     <a href="projects.html">Projects</a>
     <a href="contact.html">Contact</a>
+    <!-- Cart Icon START -->
+    <a href="cart.html" class="cart-icon-link" aria-label="View shopping cart" title="View cart">
+      <span class="cart-icon">
+        🛒
+        <span id="cart-count-badge" class="cart-count-badge">0</span>
+      </span>
+    </a>
+    <!-- Cart Icon END -->
   </nav>
 </header>
 <div class="container">
@@ -185,6 +229,25 @@
   </div>
 </footer>
 <script>
+  // --- CART BADGE LOGIC ---
+  function updateCartCountBadge() {
+    let count = 0;
+    try {
+      const cart = JSON.parse(localStorage.getItem("cart")) || [];
+      count = cart.reduce((sum, item) => sum + (item.quantity || 1), 0);
+    } catch(e){}
+    const badge = document.getElementById('cart-count-badge');
+    if (!badge) return;
+    if (count > 0) {
+      badge.textContent = count;
+      badge.style.display = 'flex';
+    } else {
+      badge.style.display = 'none';
+    }
+  }
+  document.addEventListener('DOMContentLoaded', updateCartCountBadge);
+  window.addEventListener('storage', updateCartCountBadge);
+
   function toggleNav() {
     document.querySelector('header').classList.toggle('nav-open');
   }
@@ -265,6 +328,7 @@
     }
     localStorage.setItem("cart", JSON.stringify(cart));
     showCartNotification(itemName + " added to cart!");
+    updateCartCountBadge();
   }
 
   function showCartNotification(message) {
