--- a/checkout.html
+++ b/checkout.html
@@ -295,6 +295,13 @@ h2 {
   z-index: 1;
   display: none;
 }
+
+@media (max-width: 700px) {
+  .checkout-table th.desc-col,
+  .checkout-table td.desc-col {
+    display: none;
+  }
+}
 </style>
 </head>
 <body>
