--- a/cart.html
+++ b/cart.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
 <meta charset="utf-8"/>
@@ -332,11 +333,11 @@ td.product-col {
 <a href="projects.html">Projects</a>
 <a href="contact.html">Contact</a>
 <!-- Cart Icon START -->
-<a href="cart.html" class="cart-icon-link" aria-label="View shopping cart" title="View cart">
-  <span class="cart-icon">
+<a aria-label="View shopping cart" class="cart-icon-link" href="cart.html" title="View cart">
+<span class="cart-icon">
     🛒
-    <span id="cart-count-badge" class="cart-count-badge">0</span>
-  </span>
+    <span class="cart-count-badge" id="cart-count-badge">0</span>
+</span>
 </a>
 <!-- Cart Icon END -->
 </nav>
@@ -352,7 +353,7 @@ td.product-col {
 <th class="compact-col">Price (KES)</th>
 <th class="compact-col">Deposit (KES)</th>
 <th class="compact-col">Total (KES)</th>
-<th class="compact-col">Deposit (KES)</th>
+
 </tr>
 </thead>
 <tbody></tbody>
@@ -367,7 +368,6 @@ td.product-col {
 <footer>
     © 2025 WattSun Solar Kenya | <div class="footer-contacts"><a href="mailto:info@wattsun.co.ke">info@wattsun.co.ke</a></div>
 </footer>
-
 <script>
 // Hamburger menu logic
 function toggleNav() {
@@ -409,7 +409,7 @@ document.addEventListener("DOMContentLoaded", function () {
         <td class="compact-col">${item.price.toLocaleString()}</td>
         <td class="compact-col">${deposit.toLocaleString()}</td>
         <td class="compact-col">${totalPrice.toLocaleString()}</td>
-        <td class="compact-col">${totalItemDeposit.toLocaleString()}</td>
+        
       `;
       cartTable.appendChild(row);
     });
